<resources>
    <string name="app_name">Hitung BMI</string>
    <string name="bmi_label">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang!</string>
    <string name="b_badan">Berat badan (kg)</string>
    <string name="t_badan">Tinggi badan (cm)</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="gender_p">Pria</string>
    <string name="gender_w">Wanita</string>
    <string name="btn_hitung">Hitung</string>
    <string name="nilai_awal">0</string>
    <string name="bmi_x">BMI: %1$.2f</string>
    <string name="kurus">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Gemuk</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="berat_message">Berat tidak boleh kosong</string>
    <string name="tinggi_message">Tinggi tidak boleh kosong</string>
    <string name="gender_message">Jenis Kelamin tidak boleh kosong</string>
</resources>